# discogiraffe

./: README.md  TODO.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  songs.rs  utils.rs  ytdl.rs
src/lib/: AddPlaylist.svelte  GetPlaylist.svelte  MetaDataViewer.svelte  NavButtons.svelte  PlaylistDisplay.svelte  PlaylistItem.svelte  PlaylistLibrary.svelte  Router.svelte  SettingEntry.svelte  Settings.svelte  SongListItem.svelte  SongPlayer.svelte  SongReader.svelte  concurrentMap.ts  loadAssets.ts
src/store/: files.svelte.ts  files.ts  player.ts  playlist.svelte.ts  playlist.ts  settings.svelte.ts  settings.ts  tabs.svelte.ts  tabs.ts
