[package]
name = "discogiraffe"
version = "0.0.0"
description = "A Tauri App"
authors = ["fhlmorrison"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
tauri = { version = "1.4", features = [ "fs-exists", "fs-read-file", "fs-write-file", "protocol-asset",
    "fs-read-dir",
    "dialog-open",
    "path-all",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
thiserror = "1.0.43"
id3 = "1.7.0"
base64 = "0.21.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
